Fixed the bug that the page title isn't displayed. Added a component to set the page title.

--- a/SchulCloud.Server/Localization/Components/Layouts/AnonLayout.en.resx
+++ b/SchulCloud.Server/Localization/Components/Layouts/AnonLayout.en.resx
@@ -100,8 +100,8 @@
   <data name="signInBtn" xml:space="preserve">
     <value>Sign in</value>
   </data>
-  <data name="signUpBtn" xml:space="preserve">
-    <value>Sign up</value>
+  <data name="registerBtn" xml:space="preserve">
+    <value>Register</value>
   </data>
   <data name="cultureAuto" xml:space="preserve">
     <value>automatically</value>
