--- a/SchulCloud.Server/Localization/Components/Layouts/AnonLayout.de.resx
+++ b/SchulCloud.Server/Localization/Components/Layouts/AnonLayout.de.resx
@@ -100,7 +100,7 @@
   <data name="signInBtn" xml:space="preserve">
     <value>Anmelden</value>
   </data>
-  <data name="signUpBtn" xml:space="preserve">
+  <data name="registerBtn" xml:space="preserve">
     <value>Registrieren</value>
   </data>
   <data name="cultureAuto" xml:space="preserve">
