--- a/SchulCloud.Server/Localization/Components/Layouts/MainLayout.de.resx
+++ b/SchulCloud.Server/Localization/Components/Layouts/MainLayout.de.resx
@@ -103,4 +103,13 @@
   <data name="accountSignOut" xml:space="preserve">
     <value>Abmelden</value>
   </data>
+  <data name="account" xml:space="preserve">
+    <value>Konto</value>
+  </data>
+  <data name="accountSecurity" xml:space="preserve">
+    <value>Sicherheit</value>
+  </data>
+  <data name="accountSettings" xml:space="preserve">
+    <value>Einstellungen</value>
+  </data>
 </root>
