--- a/SchulCloud.Server/Localization/Components/Pages/Account/Security.en.resx
+++ b/SchulCloud.Server/Localization/Components/Pages/Account/Security.en.resx
@@ -100,4 +100,40 @@
   <data name="title" xml:space="preserve">
     <value>Account Security</value>
   </data>
+  <data name="tabHeader" xml:space="preserve">
+    <value>Account Security</value>
+  </data>
+  <data name="tabMethods" xml:space="preserve">
+    <value>Login methods</value>
+  </data>
+  <data name="tabMfa" xml:space="preserve">
+    <value>2-factor authentication (2FA)</value>
+  </data>
+  <data name="methodPassword" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="method_LastSignIn" xml:space="preserve">
+    <value>Last sign in: {0}</value>
+  </data>
+  <data name="methodPassword_Desc" xml:space="preserve">
+    <value>The password is used to log in to this account. To protect your account, keep your password secret and do not share it with anyone. Use a strong password to log in to your account. Your password must meet at least the following security requirements.</value>
+  </data>
+  <data name="methodPassword_RequiredLength" xml:space="preserve">
+    <value>The password must be at least {0} characters long.</value>
+  </data>
+  <data name="methodPassword_RequireNonAlphanumeric" xml:space="preserve">
+    <value>The password must contain at least one non-alphanumeric character. </value>
+  </data>
+  <data name="methodPassword_RequireLowercase" xml:space="preserve">
+    <value>The password must contain at least one lowercase letter. </value>
+  </data>
+  <data name="methodPassword_RequireUppercase" xml:space="preserve">
+    <value>The password must contain at least one uppercase letter. </value>
+  </data>
+  <data name="methodPassword_RequireDigit" xml:space="preserve">
+    <value>The password must contain at least one number. </value>
+  </data>
+  <data name="methodPassword_RequiredUniqueChars" xml:space="preserve">
+    <value>The password must contain at least {0} different characters.</value>
+  </data>
 </root>
