Added a feature to change the password of a user.

--- a/SchulCloud.Server/Localization/Components/Modals/PasswordChangeModal.de.resx
+++ b/SchulCloud.Server/Localization/Components/Modals/PasswordChangeModal.de.resx
@@ -97,28 +97,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="title" xml:space="preserve">
-    <value>Konto Sicherheit</value>
+  <data name="currentPassword_Placeholder" xml:space="preserve">
+    <value>Aktuelles Passwort</value>
   </data>
-  <data name="tabHeader" xml:space="preserve">
-    <value>Konto Sicherheit</value>
+  <data name="newPassword_Placeholder" xml:space="preserve">
+    <value>Neues Passwort</value>
   </data>
-  <data name="tabMethods" xml:space="preserve">
-    <value>Anmeldemethoden</value>
+  <data name="confirmedPassword_Placeholder" xml:space="preserve">
+    <value>Neues Passwort bestätigen</value>
   </data>
-  <data name="tabMfa" xml:space="preserve">
-    <value>2-Faktor-Authentifizierung (2FA)</value>
+  <data name="abort" xml:space="preserve">
+    <value>Abbrechen</value>
   </data>
-  <data name="methodPassword" xml:space="preserve">
-    <value>Passwort</value>
+  <data name="submit" xml:space="preserve">
+    <value>Ändern</value>
   </data>
-  <data name="method_LastSignIn" xml:space="preserve">
-    <value>Letzte Anmeldung: {0}</value>
+  <data name="confirmedPassword_DoesNotMatch" xml:space="preserve">
+    <value>Das neue Passwort und das Bestätigte Passwort stimmen nicht überein.</value>
   </data>
-  <data name="methodPassword_Desc" xml:space="preserve">
-    <value>Das Passwort wird zum Anmelden an diesem Konto verwendet. Um Ihr Konto zu schützen, halten Sie Ihr Passwort geheim und geben Sie es nicht an andere weiter. Verwenden Sie ein sicheres Passwort, um sich bei Ihrem Konto anzumelden. Ihr Passwort muss mindestens folgende Sicherheitsanforderungen erfüllen.</value>
+  <data name="successToast_Title" xml:space="preserve">
+    <value>Passwortänderung</value>
   </data>
-  <data name="methodPassword_Change" xml:space="preserve">
+  <data name="successToast_Message" xml:space="preserve">
+    <value>Die Passwortänderung war erfolgreich.</value>
+  </data>
+  <data name="errorToast_Title" xml:space="preserve">
+    <value>Fehler bei der Passwortänderung</value>
+  </data>
+  <data name="modalTitle" xml:space="preserve">
     <value>Passwort ändern</value>
   </data>
 </root>
