--- a/SchulCloud.Server/Localization/Components/Modals/PasswordChangeModal.en.resx
+++ b/SchulCloud.Server/Localization/Components/Modals/PasswordChangeModal.en.resx
@@ -97,28 +97,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="title" xml:space="preserve">
-    <value>Konto Sicherheit</value>
+  <data name="abort" xml:space="preserve">
+    <value>Cancel</value>
   </data>
-  <data name="tabHeader" xml:space="preserve">
-    <value>Konto Sicherheit</value>
+  <data name="submit" xml:space="preserve">
+    <value>Change</value>
   </data>
-  <data name="tabMethods" xml:space="preserve">
-    <value>Anmeldemethoden</value>
+  <data name="currentPassword_Placeholder" xml:space="preserve">
+    <value>Current Password</value>
   </data>
-  <data name="tabMfa" xml:space="preserve">
-    <value>2-Faktor-Authentifizierung (2FA)</value>
+  <data name="newPassword_Placeholder" xml:space="preserve">
+    <value>New Passwort</value>
   </data>
-  <data name="methodPassword" xml:space="preserve">
-    <value>Passwort</value>
+  <data name="confirmedPassword_Placeholder" xml:space="preserve">
+    <value>Confirm new password</value>
   </data>
-  <data name="method_LastSignIn" xml:space="preserve">
-    <value>Letzte Anmeldung: {0}</value>
+  <data name="confirmedPassword_DoesNotMatch" xml:space="preserve">
+    <value>The new password and the confirmed password do not match.</value>
   </data>
-  <data name="methodPassword_Desc" xml:space="preserve">
-    <value>Das Passwort wird zum Anmelden an diesem Konto verwendet. Um Ihr Konto zu schützen, halten Sie Ihr Passwort geheim und geben Sie es nicht an andere weiter. Verwenden Sie ein sicheres Passwort, um sich bei Ihrem Konto anzumelden. Ihr Passwort muss mindestens folgende Sicherheitsanforderungen erfüllen.</value>
+  <data name="successToast_Message" xml:space="preserve">
+    <value>The password change was successful.</value>
   </data>
-  <data name="methodPassword_Change" xml:space="preserve">
-    <value>Passwort ändern</value>
+  <data name="successToast_Title" xml:space="preserve">
+    <value>Password change</value>
+  </data>
+  <data name="errorToast_Title" xml:space="preserve">
+    <value>Error changing password</value>
+  </data>
+  <data name="modalTitle" xml:space="preserve">
+    <value>Change Password</value>
   </data>
 </root>
