Added a password reset feature including a reset limiter for a user.

--- a/SchulCloud.Server/Localization/Components/Modals/PasswordChangeModal.en.resx
+++ b/SchulCloud.Server/Localization/Components/Modals/PasswordChangeModal.en.resx
@@ -107,7 +107,7 @@
     <value>Current Password</value>
   </data>
   <data name="newPassword_Placeholder" xml:space="preserve">
-    <value>New Passwort</value>
+    <value>New Password</value>
   </data>
   <data name="confirmedPassword_Placeholder" xml:space="preserve">
     <value>Confirm new password</value>
