--- a/SchulCloud.Server/Localization/Components/Pages/Account/Security.de.resx
+++ b/SchulCloud.Server/Localization/Components/Pages/Account/Security.de.resx
@@ -121,4 +121,7 @@
   <data name="methodPassword_Change" xml:space="preserve">
     <value>Passwort ändern</value>
   </data>
+  <data name="methodPassword_Reset" xml:space="preserve">
+    <value>Passwort vergessen?</value>
+  </data>
 </root>
