--- a/SchulCloud.Server/Localization/Components/Pages/Auth/ResetPassword.de.resx
+++ b/SchulCloud.Server/Localization/Components/Pages/Auth/ResetPassword.de.resx
@@ -98,36 +98,57 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="title" xml:space="preserve">
-    <value>Sign in</value>
+    <value>Passwort zurücksetzen</value>
   </data>
-  <data name="formHeader" xml:space="preserve">
-    <value>Please sign in</value>
+  <data name="userFormUserPlaceholder" xml:space="preserve">
+    <value>E-Mail Adresse oder Benutzername</value>
   </data>
-  <data name="formUserPlaceholder" xml:space="preserve">
-    <value>Email address or username</value>
+  <data name="userFormSubmit" xml:space="preserve">
+    <value>Passwort zurücksetzen</value>
   </data>
-  <data name="formPasswordPlaceholder" xml:space="preserve">
-    <value>password</value>
+  <data name="sendResetBtn" xml:space="preserve">
+    <value>Link senden</value>
   </data>
-  <data name="formSubmit" xml:space="preserve">
-    <value>sign in</value>
+  <data name="resetFormNewPasswordPlaceholder" xml:space="preserve">
+    <value>Neues Passwort</value>
   </data>
-  <data name="formPersistent" xml:space="preserve">
-    <value>remain signed in</value>
+  <data name="resetFormConfirmedPasswordPlaceholder" xml:space="preserve">
+    <value>Neues Passwort bestätigen</value>
   </data>
-  <data name="signIn_Failed" xml:space="preserve">
-    <value>The username or password is incorrect.</value>
+  <data name="resetFormSubmit" xml:space="preserve">
+    <value>Passwort zurücksetzen</value>
   </data>
-  <data name="signIn_NotAllowed" xml:space="preserve">
-    <value>This user is currently not allowed to log in.</value>
+  <data name="userForm_NotFound" xml:space="preserve">
+    <value>Der angegebene Benutzer konnte nicht gefunden werden.</value>
   </data>
-  <data name="signIn_LockedOut" xml:space="preserve">
-    <value>The user is currently locked out. Please try again in {0}.</value>
+  <data name="confirmedPassword_DoesNotMatch" xml:space="preserve">
+    <value>Das neue Passwort und das Bestätigte Passwort stimmen nicht überein.</value>
   </data>
-  <data name="signIn_LockedOut_NotSpecified" xml:space="preserve">
-    <value>The user is banned indefinitely.</value>
+  <data name="errorToastTitle" xml:space="preserve">
+    <value>Fehler beim zurücksetzen des Passworts</value>
   </data>
-  <data name="formPasswordForgot" xml:space="preserve">
-    <value>Forgot Password?</value>
+  <data name="successToastMessage" xml:space="preserve">
+    <value>Die Zurücksetzung des Passworts war erfolgreich.</value>
+  </data>
+  <data name="toastTitle" xml:space="preserve">
+    <value>Passwortzurücksetzung</value>
+  </data>
+  <data name="sendResetText" xml:space="preserve">
+    <value>Zum Zurücksetzen des Account-Passworts wird an die im Account hinterlegte E-Mail-Adresse ein Link zum Zurücksetzen des Passworts gesendet.</value>
+  </data>
+  <data name="userFormText" xml:space="preserve">
+    <value>Geben Sie bitte die E-Mail Adresse oder den Benutzernamen des Benutzers ein dessen Passwort zurückgesetzt werden soll.</value>
+  </data>
+  <data name="sentToastTitle" xml:space="preserve">
+    <value>Passwort Zurücksetzungs Link gesendet</value>
+  </data>
+  <data name="sentToastMessage" xml:space="preserve">
+    <value>Der Link zum zurücksetzen des Passworts wurde an {0} gesendet.</value>
+  </data>
+  <data name="sentToastMessage_Timeout" xml:space="preserve">
+    <value>An diesen Benutzer wurde bereits eine Passwort Zurücksetzen E-Mail gesendet. Versuchen Sie es in {0} nochmal.</value>
+  </data>
+  <data name="sentToastTitle_Timeout" xml:space="preserve">
+    <value>Passwort Zurücksetzungs Link kann nicht gesendet werden</value>
   </data>
 </root>
