--- a/SchulCloud.Server/Localization/Components/Pages/Auth/ResetPassword.en.resx
+++ b/SchulCloud.Server/Localization/Components/Pages/Auth/ResetPassword.en.resx
@@ -98,36 +98,57 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="title" xml:space="preserve">
-    <value>Sign in</value>
+    <value>reset Password</value>
   </data>
-  <data name="formHeader" xml:space="preserve">
-    <value>Please sign in</value>
-  </data>
-  <data name="formUserPlaceholder" xml:space="preserve">
+  <data name="userFormUserPlaceholder" xml:space="preserve">
     <value>Email address or username</value>
   </data>
-  <data name="formPasswordPlaceholder" xml:space="preserve">
-    <value>password</value>
+  <data name="userFormSubmit" xml:space="preserve">
+    <value>reset Password</value>
   </data>
-  <data name="formSubmit" xml:space="preserve">
-    <value>sign in</value>
+  <data name="userForm_NotFound" xml:space="preserve">
+    <value>The specified user could not be found.</value>
   </data>
-  <data name="formPersistent" xml:space="preserve">
-    <value>remain signed in</value>
+  <data name="confirmedPassword_DoesNotMatch" xml:space="preserve">
+    <value>The new password and the confirmed password do not match.</value>
   </data>
-  <data name="signIn_Failed" xml:space="preserve">
-    <value>The username or password is incorrect.</value>
+  <data name="sendResetBtn" xml:space="preserve">
+    <value>Send link</value>
   </data>
-  <data name="signIn_NotAllowed" xml:space="preserve">
-    <value>This user is currently not allowed to log in.</value>
+  <data name="resetFormSubmit" xml:space="preserve">
+    <value>reset Password</value>
   </data>
-  <data name="signIn_LockedOut" xml:space="preserve">
-    <value>The user is currently locked out. Please try again in {0}.</value>
+  <data name="successToastMessage" xml:space="preserve">
+    <value>The password reset was successful.</value>
   </data>
-  <data name="signIn_LockedOut_NotSpecified" xml:space="preserve">
-    <value>The user is banned indefinitely.</value>
+  <data name="toastTitle" xml:space="preserve">
+    <value>Password reset</value>
   </data>
-  <data name="formPasswordForgot" xml:space="preserve">
-    <value>Forgot Password?</value>
+  <data name="errorToastTitle" xml:space="preserve">
+    <value>Error resetting password</value>
+  </data>
+  <data name="resetFormNewPasswordPlaceholder" xml:space="preserve">
+    <value>New Password</value>
+  </data>
+  <data name="resetFormConfirmedPasswordPlaceholder" xml:space="preserve">
+    <value>Confirm new password</value>
+  </data>
+  <data name="sendResetText" xml:space="preserve">
+    <value>To reset your account password, a link to reset your password will be sent to the email address stored in your account.</value>
+  </data>
+  <data name="userFormText" xml:space="preserve">
+    <value>Please enter the email address or username of the user whose password you want to reset.</value>
+  </data>
+  <data name="sentToastTitle" xml:space="preserve">
+    <value>Password reset link sent</value>
+  </data>
+  <data name="sentToastMessage" xml:space="preserve">
+    <value>The password reset link has been sent to {0}.</value>
+  </data>
+  <data name="sentToastTitle_Timeout" xml:space="preserve">
+    <value>Password reset link cannot be sent</value>
+  </data>
+  <data name="sentToastMessage_Timeout" xml:space="preserve">
+    <value>A password reset email has already been sent to this user. Please try again at {0}.</value>
   </data>
 </root>
