--- a/SchulCloud.Server/Localization/Components/Pages/Account/Security/PasswordChange.de.resx
+++ b/SchulCloud.Server/Localization/Components/Pages/Account/Security/PasswordChange.de.resx
@@ -124,7 +124,7 @@
   <data name="errorToast_Title" xml:space="preserve">
     <value>Fehler bei der Passwortänderung</value>
   </data>
-  <data name="modalTitle" xml:space="preserve">
+  <data name="title" xml:space="preserve">
     <value>Passwort ändern</value>
   </data>
 </root>
