-Improvement: Used FluentValidation and Blazored.FluentValidation for optiosn and model validation. -Chore: Removed App.razor.cs and LocalizationOptions.cs that are unused since previous commits.

--- a/SchulCloud.Web/SchulCloud.Web/Localization/Models/PasswordResetModel.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Models/PasswordResetModel.de.resx
@@ -97,31 +97,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="abort" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
-  <data name="submit" xml:space="preserve">
-    <value>Change</value>
-  </data>
-  <data name="currentPassword_Placeholder" xml:space="preserve">
-    <value>Current Password</value>
-  </data>
-  <data name="newPassword_Placeholder" xml:space="preserve">
-    <value>New Password</value>
-  </data>
-  <data name="confirmedPassword_Placeholder" xml:space="preserve">
-    <value>Confirm new password</value>
-  </data>
-  <data name="successToast_Message" xml:space="preserve">
-    <value>The password change was successful.</value>
-  </data>
-  <data name="successToast_Title" xml:space="preserve">
-    <value>Password change</value>
-  </data>
-  <data name="errorToast_Title" xml:space="preserve">
-    <value>Error changing password</value>
-  </data>
-  <data name="title" xml:space="preserve">
-    <value>Change Password</value>
+  <data name="confirmedPasswordNotMatch" xml:space="preserve">
+    <value>Das neue Passwort und das Bestätigte Passwort stimmen nicht überein.</value>
   </data>
 </root>
