--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/ActivateAuthenticator.en.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/ActivateAuthenticator.en.resx
@@ -97,67 +97,40 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="activationGuide_0" xml:space="preserve">
+    <value>Download an authentication app on your mobile device if you don't already have one installed. Recommended apps: Google Authenticator, Microsoft Authenticator, Authy.</value>
+  </data>
+  <data name="activationGuide_1" xml:space="preserve">
+    <value>Open the authenticator app on your mobile device. Select "Add Account" or the corresponding icon to create a new code. Scan the QR code displayed on your screen with the app or enter the code manually below.</value>
+  </data>
+  <data name="activationGuide_2" xml:space="preserve">
+    <value>The authentication app will now generate a {0}-digit code. Enter this code in the corresponding confirmation field and click "Activate". If the code is correct, two-factor authentication will be activated.</value>
+  </data>
   <data name="title" xml:space="preserve">
-    <value>Account Security</value>
+    <value>Enable 2FA authentication app</value>
   </data>
-  <data name="tabHeader" xml:space="preserve">
-    <value>Account Security</value>
+  <data name="form_Code_Placeholder" xml:space="preserve">
+    <value>Authentication code</value>
   </data>
-  <data name="tabSignIn" xml:space="preserve">
-    <value>Sign in</value>
+  <data name="requestError_Title" xml:space="preserve">
+    <value>An error occurred while renewing the code.</value>
   </data>
-  <data name="signIn_Password" xml:space="preserve">
-    <value>Password</value>
+  <data name="form_CodeInvalid" xml:space="preserve">
+    <value>The code is invalid.</value>
   </data>
-  <data name="signIn_Last" xml:space="preserve">
-    <value>Last sign in: {0}</value>
+  <data name="form_Submit" xml:space="preserve">
+    <value>Activate</value>
   </data>
-  <data name="password_Desc" xml:space="preserve">
-    <value>The password is used to log in to this account. To protect your account, keep your password secret and do not share it with anyone. Use a strong password to log in to your account. Your password must meet at least the following security requirements.</value>
-  </data>
-  <data name="password_Change" xml:space="preserve">
-    <value>Change Password</value>
-  </data>
-  <data name="password_Reset" xml:space="preserve">
-    <value>Forgot Password?</value>
-  </data>
-  <data name="mfaMethods" xml:space="preserve">
-    <value>2-factor authentication (2FA)</value>
-  </data>
-  <data name="signInMethods" xml:space="preserve">
-    <value>Login methods</value>
-  </data>
-  <data name="mfa_Authenticator" xml:space="preserve">
-    <value>Authentication app</value>
-  </data>
-  <data name="authenticator_Activate" xml:space="preserve">
+  <data name="activateHeadline" xml:space="preserve">
     <value>Enable authentication app</value>
   </data>
-  <data name="authenticator_DeactivateModal_Message" xml:space="preserve">
-    <value>You are about to disable 2FA authentication. This will invalidate the authenticator app codes and backup codes. Do you still want to continue?</value>
+  <data name="activationSuccess_Title" xml:space="preserve">
+    <value>2FA authentication enabled</value>
   </data>
-  <data name="authenticator_DeactivateModal_ExecuteBtn" xml:space="preserve">
-    <value>Deactivate</value>
+  <data name="activationError_Title" xml:space="preserve">
+    <value>An error occurred while activating 2FA.</value>
   </data>
-  <data name="authenticator_DeactivateModal_AbortBtn" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
-  <data name="authenticator_Deactivate_ErrorTitle" xml:space="preserve">
-    <value>An error occurred during deactivation.</value>
-  </data>
-  <data name="authenticator_Deactivate" xml:space="preserve">
-    <value>Disable authentication app</value>
-  </data>
-  <data name="mfa_Desc" xml:space="preserve">
-    <value>Two-factor authentication (2FA) provides an additional layer of security for your account. Once activated, you will need an additional factor in addition to your password to log in. This method ensures that only you can access your account, even if your password is compromised.</value>
-  </data>
-  <data name="authenticator_Desc" xml:space="preserve">
-    <value>2FA authentication using an authentication app uses an app on your mobile device to generate a temporary, one-time code each time you log in.</value>
-  </data>
-  <data name="authenticator_DeactivateSuccess_Title" xml:space="preserve">
-    <value>2FA authentication has been disabled</value>
-  </data>
-  <data name="authenticator_DeactivateSuccess_Message" xml:space="preserve">
-    <value>The additional account security provided by 2FA authentication is no longer available.</value>
+  <data name="activationSuccess_Message" xml:space="preserve">
+    <value>The authentication app can now be used as a 2FA authentication method.</value>
   </data>
 </root>
