--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/GenerateRecoveryCodes.en.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/GenerateRecoveryCodes.en.resx
@@ -97,82 +97,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="file_Name" xml:space="preserve">
+    <value>2FA Recovery Codes ({0})</value>
+  </data>
+  <data name="file_Introduction" xml:space="preserve">
+    <value>These are the account recovery codes for the {0} account {1} ({2}). Keep these safe!</value>
+  </data>
   <data name="title" xml:space="preserve">
-    <value>Account Security</value>
+    <value>2FA recovery codes</value>
   </data>
-  <data name="tabHeader" xml:space="preserve">
-    <value>Account Security</value>
+  <data name="downloadBtn" xml:space="preserve">
+    <value>Download codes</value>
   </data>
-  <data name="tabSignIn" xml:space="preserve">
-    <value>Sign in</value>
+  <data name="generationError_Title" xml:space="preserve">
+    <value>An error occurred while generating the codes.</value>
   </data>
-  <data name="signIn_Password" xml:space="preserve">
-    <value>Password</value>
+  <data name="generationError_Message" xml:space="preserve">
+    <value>Due to an error, no codes could be generated. Reload the page to try again.</value>
   </data>
-  <data name="signIn_Last" xml:space="preserve">
-    <value>Last sign in: {0}</value>
+  <data name="doneBtn" xml:space="preserve">
+    <value>Back</value>
   </data>
-  <data name="password_Desc" xml:space="preserve">
-    <value>The password is used to log in to this account. To protect your account, keep your password secret and do not share it with anyone. Use a strong password to log in to your account. Your password must meet at least the following security requirements.</value>
-  </data>
-  <data name="password_Change" xml:space="preserve">
-    <value>Change Password</value>
-  </data>
-  <data name="password_Reset" xml:space="preserve">
-    <value>Forgot Password?</value>
-  </data>
-  <data name="mfaMethods" xml:space="preserve">
-    <value>2-factor authentication (2FA)</value>
-  </data>
-  <data name="signInMethods" xml:space="preserve">
-    <value>Login methods</value>
-  </data>
-  <data name="mfa_Authenticator" xml:space="preserve">
-    <value>Authentication app</value>
-  </data>
-  <data name="authenticator_Activate" xml:space="preserve">
-    <value>Enable authentication app</value>
-  </data>
-  <data name="authenticator_DeactivateModal_Message" xml:space="preserve">
-    <value>You are about to disable 2FA authentication. This will invalidate the authenticator app codes and backup codes. Do you still want to continue?</value>
-  </data>
-  <data name="authenticator_DeactivateModal_ExecuteBtn" xml:space="preserve">
-    <value>Deactivate</value>
-  </data>
-  <data name="authenticator_DeactivateModal_AbortBtn" xml:space="preserve">
-    <value>Cancel</value>
-  </data>
-  <data name="authenticator_Deactivate_ErrorTitle" xml:space="preserve">
-    <value>An error occurred during deactivation.</value>
-  </data>
-  <data name="authenticator_Deactivate" xml:space="preserve">
-    <value>Disable authentication app</value>
-  </data>
-  <data name="mfa_Desc" xml:space="preserve">
-    <value>Two-factor authentication (2FA) provides an additional layer of security for your account. Once activated, you will need an additional factor in addition to your password to log in. This method ensures that only you can access your account, even if your password is compromised.</value>
-  </data>
-  <data name="authenticator_Desc" xml:space="preserve">
-    <value>2FA authentication using an authentication app uses an app on your mobile device to generate a temporary, one-time code each time you log in.</value>
-  </data>
-  <data name="authenticator_DeactivateSuccess_Title" xml:space="preserve">
-    <value>2FA authentication has been disabled</value>
-  </data>
-  <data name="authenticator_DeactivateSuccess_Message" xml:space="preserve">
-    <value>The additional account security provided by 2FA authentication is no longer available.</value>
-  </data>
-  <data name="recovery_Desc" xml:space="preserve">
-    <value>2FA recovery codes are a one-time code that allows you to regain access to your account if all other 2FA authentication methods are unavailable. Keep these codes safe as they are an important backup option to ensure account access.</value>
-  </data>
-  <data name="recovery_ValidCodes" xml:space="preserve">
-    <value>{0} codes are valid</value>
-  </data>
-  <data name="recovery_GenerateNew" xml:space="preserve">
-    <value>Generate recovery codes</value>
-  </data>
-  <data name="recovery_Renew" xml:space="preserve">
-    <value>Generate new recovery codes</value>
-  </data>
-  <data name="mfa_Recovery" xml:space="preserve">
-    <value>Wiederherstellungscodes</value>
+  <data name="desc" xml:space="preserve">
+    <value>Each of the 2FA recovery codes is valid only once and can be used for 2FA authentication. Keep them safe!</value>
   </data>
 </root>
