--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/Index.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/Index.de.resx
@@ -130,34 +130,28 @@
   <data name="mfa_Authenticator" xml:space="preserve">
     <value>Authentifizierungs-App</value>
   </data>
-  <data name="authenticator_Activate" xml:space="preserve">
+  <data name="authenticator_Enable" xml:space="preserve">
     <value>Authentifizierungs-App aktivieren</value>
   </data>
   <data name="authenticator_Desc" xml:space="preserve">
     <value>Die 2FA-Authentifizierungs mittels einer Authentifizierungs-App nutzt eine App auf Ihrem Mobilgerät, um bei jeder Anmeldung einen temporären, einmalig gültigen Code zu generieren.</value>
   </data>
-  <data name="authenticator_Deactivate" xml:space="preserve">
+  <data name="authenticator_Disable" xml:space="preserve">
     <value>Authentifizierungs-App deaktivieren</value>
   </data>
-  <data name="authenticator_DeactivateModal_Message" xml:space="preserve">
+  <data name="authenticator_DisableMessage" xml:space="preserve">
     <value>Sie sind dabei die 2FA Authentifizierung zu deaktivieren. Dies sorgt dafür, dass Codes der Authenticator-App und die Backup-Codes ungültig werden. Wollen Sie trotzdem fortfahren?</value>
   </data>
-  <data name="authenticator_DeactivateModal_AbortBtn" xml:space="preserve">
-    <value>Abrechen</value>
-  </data>
-  <data name="authenticator_DeactivateModal_ExecuteBtn" xml:space="preserve">
+  <data name="authenticator_DisableExecuteBtn" xml:space="preserve">
     <value>Deaktivieren</value>
-  </data>
-  <data name="authenticator_Deactivate_ErrorTitle" xml:space="preserve">
-    <value>Bei der Deaktivierung ist ein Fehler aufgetreten.</value>
   </data>
   <data name="mfa_Desc" xml:space="preserve">
     <value>Eine Zwei-Faktor Authentifizierungs (2FA) bietet eine zusätzliche Sicherheitsebene für Ihr Konto. Nach der Aktivierung benötigen Sie neben Ihrem Passwort auch einen weiteren Faktor zur Anmeldung. Diese Methode stellt sicher, dass nur Sie, selbst wenn Ihr Passwort kompromittiert ist, Zugang zu Ihrem Konto haben.</value>
   </data>
-  <data name="authenticator_DeactivateSuccess_Title" xml:space="preserve">
+  <data name="authenticator_Disable_Success" xml:space="preserve">
     <value>Die 2FA-Authentifizierung wurde deaktiviert</value>
   </data>
-  <data name="authenticator_DeactivateSuccess_Message" xml:space="preserve">
+  <data name="authenticator_Disable_SuccessMessage" xml:space="preserve">
     <value>Die zusätzliche Kontosicherheit durch die 2FA-Authentifizierung nicht mehr verfügbar.</value>
   </data>
   <data name="recovery_Desc" xml:space="preserve">
@@ -174,5 +168,35 @@
   </data>
   <data name="mfa_Recovery" xml:space="preserve">
     <value>Wiederherstellungscodes</value>
+  </data>
+  <data name="email_Enable" xml:space="preserve">
+    <value>E-Mail Authentifizierung aktivieren</value>
+  </data>
+  <data name="email_Enable_Success" xml:space="preserve">
+    <value>E-Mail Authentifizierung aktiviert</value>
+  </data>
+  <data name="email_Enable_SuccessMessage" xml:space="preserve">
+    <value>Die E-Mail Authentifizierung kann nun als 2FA Authentifizierungs-Methode genutzt werden.</value>
+  </data>
+  <data name="enable_Error" xml:space="preserve">
+    <value>Beim der aktivieren ist ein Fehler aufgetreten.</value>
+  </data>
+  <data name="email_Disable" xml:space="preserve">
+    <value>E-Mail Authentifizierung deaktivieren</value>
+  </data>
+  <data name="email_Disable_Success" xml:space="preserve">
+    <value>E-Mail Authentifizierung deaktiviert.</value>
+  </data>
+  <data name="disable_Error" xml:space="preserve">
+    <value>Bei der deaktivierung ist ein Fehler aufgetreten.</value>
+  </data>
+  <data name="email_Disable_SuccessMessage" xml:space="preserve">
+    <value>Die E-Mail 2FA-Authentifizierung ist nun nicht mehr für diesen Account verfügbar.</value>
+  </data>
+  <data name="mfa_Email" xml:space="preserve">
+    <value>E-Mail Authentifizierung</value>
+  </data>
+  <data name="email_Desc" xml:space="preserve">
+    <value>Bei der 2FA-Authentifizierung per E-Mail erhalten Sie Einmalcode an die E-Mail-Adresse ihres Accounts.</value>
   </data>
 </root>
