-Fix: Fixed the confirmation modal when disabling 2fa. -Improvement: Used UserManager.Get{Property}Async as a instead of the user's property. -Config: Updated configuration to disable useless logs. -Config: Disabled opening browser on start. -Refactor: Renamed some localization keys. -Refactor: Run code clean-up

--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/Index.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/Index.de.resx
@@ -199,4 +199,7 @@
   <data name="email_Desc" xml:space="preserve">
     <value>Bei der 2FA-Authentifizierung per E-Mail erhalten Sie Einmalcode an die E-Mail-Adresse ihres Accounts.</value>
   </data>
+  <data name="authenticator_DisableAbortBtn" xml:space="preserve">
+    <value>Abrechen</value>
+  </data>
 </root>
