--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ResetPassword.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ResetPassword.de.resx
@@ -136,16 +136,16 @@
   <data name="userFormText" xml:space="preserve">
     <value>Geben Sie bitte die E-Mail Adresse oder den Benutzernamen des Benutzers ein dessen Passwort zurückgesetzt werden soll.</value>
   </data>
-  <data name="sentToastTitle" xml:space="preserve">
+  <data name="sent" xml:space="preserve">
     <value>Passwort Zurücksetzungs Link gesendet</value>
   </data>
-  <data name="sentToastMessage" xml:space="preserve">
+  <data name="sentMessage" xml:space="preserve">
     <value>Der Link zum zurücksetzen des Passworts wurde an {0} gesendet.</value>
   </data>
-  <data name="sentToastMessage_Timeout" xml:space="preserve">
+  <data name="sent_TimeoutMessage" xml:space="preserve">
     <value>An diesen Benutzer wurde bereits eine Passwort Zurücksetzen E-Mail gesendet. Versuchen Sie es in {0} nochmal.</value>
   </data>
-  <data name="sentToastTitle_Timeout" xml:space="preserve">
+  <data name="sent_Timeout" xml:space="preserve">
     <value>Passwort Zurücksetzungs Link kann nicht gesendet werden</value>
   </data>
 </root>
