--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ResetPassword.en.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ResetPassword.en.resx
@@ -136,16 +136,16 @@
   <data name="userFormText" xml:space="preserve">
     <value>Please enter the email address or username of the user whose password you want to reset.</value>
   </data>
-  <data name="sentToastTitle" xml:space="preserve">
+  <data name="sent" xml:space="preserve">
     <value>Password reset link sent</value>
   </data>
-  <data name="sentToastMessage" xml:space="preserve">
+  <data name="sentMessage" xml:space="preserve">
     <value>The password reset link has been sent to {0}.</value>
   </data>
-  <data name="sentToastTitle_Timeout" xml:space="preserve">
+  <data name="sent_Timeout" xml:space="preserve">
     <value>Password reset link cannot be sent</value>
   </data>
-  <data name="sentToastMessage_Timeout" xml:space="preserve">
+  <data name="sent_TimeoutMessage" xml:space="preserve">
     <value>A password reset email has already been sent to this user. Please try again at {0}.</value>
   </data>
 </root>
